Fix css on tablets and add pm2 serve script

--- a/apps/front/src/app/shared/header/header.component.scss
+++ b/apps/front/src/app/shared/header/header.component.scss
@@ -48,7 +48,6 @@ a:hover {
 
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
   .create-button {
-    margin-bottom: 1rem;
     width: 20%;
     height: 60px;
   }
